# LIGHTER_Market_Making_Rust

./: .dockerignore  .env.example  .gitignore  Cargo.toml  Dockerfile  PLAN.md  PLAN_PARITY.md  README.md  config.json  docker-compose.yml  run_live.sh  scripts_monitor.py
docs/: CODEX_REVIEW_correctness.md  CODEX_REVIEW_hotpath_latency.md  CODEX_REVIEW_live_safety.md  CODEX_REVIEW_live_safety_2.md  CODEX_REVIEW_live_safety_3.md  CODEX_REVIEW_live_safety_4.md  CODEX_REVIEW_live_safety_5.md  DOCKER.md  README.md
src/: config.rs  lib.rs  logging.rs  main.rs  orchestrator.rs  risk.rs  shared.rs  types.rs  util.rs
src/account/: fill_accounting.rs  mod.rs  persistence.rs  pnl_actor.rs
src/binance/: book_ticker.rs  depth_client.rs  mod.rs  obi.rs
src/book/: local_book.rs  mod.rs
src/exec/: instance_lock.rs  mod.rs  order_manager.rs  paced_send.rs  rate_limit.rs  signing.rs
src/lighter/: auth.rs  messages.rs  mod.rs  nonce.rs  rest.rs  signer.rs  tx_ws.rs  ws.rs
src/metrics/: live_metrics.rs  mod.rs  trade_log.rs
src/strategy/: mod.rs  quotes.rs  rolling.rs  vol_obi.rs
