[package]
name = "lighter-mm"
version = "0.1.0"
edition = "2021"
description = "High-performance Rust market maker for the Lighter (zkLighter) perpetuals exchange"
default-run = "lighter-mm"

[[bin]]
name = "lighter-mm"
path = "src/main.rs"

[[bin]]
name = "test_sign"
path = "src/bin/test_sign.rs"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["full", "parking_lot"] }

# WebSocket + HTTP
tokio-tungstenite = { version = "0.21", features = ["native-tls"] }
futures-util = "0.3"
reqwest = { version = "0.11", features = ["json", "rustls-tls", "blocking"] }
url = "2"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# FFI to the native lighter signer (.so)
libloading = "0.8"
libc = "0.2"
hex = "0.4"

# Lock-free / concurrency
crossbeam = "0.8"
crossbeam-utils = "0.8"
parking_lot = "0.12"
arc-swap = "1"
smallvec = "1"
core_affinity = "0.8"

# Fast float parsing
fast-float = "0.2"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# CSV trade log
csv = "1"

# Errors
thiserror = "1"
anyhow = "1"

# Env
dotenvy = "0.15"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
# `unwind` (not `abort`): a panic in the hot task / sender then unwinds that task and resolves
# its JoinHandle (Err) instead of nuking the whole process — so `run()` always reaches the
# shutdown cancel-all and never leaves live orders resting on a crash. The hot path has no
# panics in steady state, so the codegen cost over `abort` is negligible for this workload.
panic = "unwind"

[profile.dev]
opt-level = 1
